Fix: Make JWT system adequate
