# backend/docs/swagger.json
@@ -13,6 +13,11 @@
     "paths": {
         "/auth/": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Validates token, and if it valid returns it's claims",
                 "consumes": [
                     "application/json"
@@ -24,15 +29,6 @@
                     "Authorization"
                 ],
                 "summary": "Get token claims",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Access token",
-                        "name": "token",
-                        "in": "query",
-                        "required": true
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -103,11 +99,13 @@
                 "summary": "Refresh access token",
                 "parameters": [
                     {
-                        "type": "string",
                         "description": "Refresh Token",
                         "name": "refresh_token",
-                        "in": "query",
-                        "required": true
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.RefreshRequest"
+                        }
                     }
                 ],
                 "responses": {
@@ -167,6 +165,11 @@
         },
         "/avatar": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Retrieves the avatar image for the specified user or the authenticated user if no user_id is provided.",
                 "produces": [
                     "image/jpeg",
@@ -177,13 +180,6 @@
                 ],
                 "summary": "Get user avatar",
                 "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Access token",
-                        "name": "token",
-                        "in": "query",
-                        "required": true
-                    },
                     {
                         "type": "integer",
                         "description": "User ID",
@@ -225,6 +221,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Updates the avatar image for the authenticated user. Supports JPEG and PNG files up to 2MB.",
                 "consumes": [
                     "multipart/form-data"
@@ -237,13 +238,6 @@
                 ],
                 "summary": "Update user avatar",
                 "parameters": [
-                    {
-                        "type": "string",
-                        "description": "JWT token for authentication",
-                        "name": "token",
-                        "in": "query",
-                        "required": true
-                    },
                     {
                         "type": "file",
                         "description": "Avatar image file (JPEG or PNG)",
@@ -285,6 +279,11 @@
         },
         "/interests/": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "consumes": [
                     "application/json"
                 ],
@@ -297,13 +296,6 @@
                 "summary": "Get user's interests",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "Token",
-                        "name": "token",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
                         "type": "integer",
                         "description": "User ID",
                         "name": "user_id",
@@ -313,6 +305,11 @@
                 "responses": {}
             },
             "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "consumes": [
                     "application/json"
                 ],
@@ -324,13 +321,6 @@
                 ],
                 "summary": "Update user's interests",
                 "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Access token",
-                        "name": "token",
-                        "in": "query",
-                        "required": true
-                    },
                     {
                         "description": "Interests to set",
                         "name": "interests",
@@ -346,6 +336,11 @@
         },
         "/interests/all": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Retrieves paginated users who have specified interests, along with their profiles and all interests",
                 "consumes": [
                     "application/json"
@@ -358,13 +353,6 @@
                 ],
                 "summary": "Get users by interests",
                 "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Access token",
-                        "name": "token",
-                        "in": "query",
-                        "required": true
-                    },
                     {
                         "type": "integer",
                         "description": "Page number (starting from 1)",
@@ -417,6 +405,11 @@
         },
         "/profile/": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Returns profile info of specified user id. If not specified, returns profile info of user encoded in jwt",
                 "consumes": [
                     "application/json"
@@ -429,13 +422,6 @@
                 ],
                 "summary": "Get profile",
                 "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Access token",
-                        "name": "token",
-                        "in": "query",
-                        "required": true
-                    },
                     {
                         "type": "integer",
                         "description": "User ID",
@@ -453,6 +439,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Creates profile",
                 "consumes": [
                     "application/json"
@@ -465,13 +456,6 @@
                 ],
                 "summary": "Create profile",
                 "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Access token",
-                        "name": "token",
-                        "in": "query",
-                        "required": true
-                    },
                     {
                         "description": "Profile Info",
                         "name": "profile_info",
@@ -495,6 +479,11 @@
                 }
             },
             "patch": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Partially updates profile information",
                 "consumes": [
                     "application/json"
@@ -507,13 +496,6 @@
                 ],
                 "summary": "Update profile",
                 "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Access token",
-                        "name": "token",
-                        "in": "query",
-                        "required": true
-                    },
                     {
                         "description": "Profile Info to update",
                         "name": "profile_info",
@@ -584,6 +566,17 @@
                 }
             }
         },
+        "models.RefreshRequest": {
+            "type": "object",
+            "required": [
+                "refresh_token"
+            ],
+            "properties": {
+                "refresh_token": {
+                    "type": "string"
+                }
+            }
+        },
         "models.UpdateInterestsRequest": {
             "type": "object",
             "properties": {
@@ -628,6 +621,13 @@
                     "$ref": "#/definitions/models.Profile"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "BearerAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
